--- a/src/components/Breadcrumbs/style.scss
+++ b/src/components/Breadcrumbs/style.scss
@@ -1,5 +1,4 @@
 .breadcrumbs {
-  margin-bottom: 4em;
   display:flex;
   justify-content: space-between;
 
@@ -51,4 +50,28 @@
       }
     }
   } 
+}
+
+#mobile-nav-hr {
+  display: none;  // toggle remove for mobile view
+  width: 100%;
+  margin: 1em 0 !important;
+  border: none;
+  opacity: 1;
+  background-color: var(--osweb-color-primary);
+  background-image: none !important;
+}
+
+@media (max-width: 768px) {
+  #mobile-nav-hr {
+    display: block;
+  }
+
+  .breadcrumbs{
+    justify-content: space-between !important;
+    margin-left: 5rem !important;  // leaves room for the burger menu icon
+    &__container {
+      margin-bottom: 0;
+    }
+  }
 }
